# CToyProjs

./: .gitignore  README.md
flycv-android-example/: CMakeLists.txt  main.cpp  脚本.txt
flycv-android-example/flycv/include/: flycv.h  version.h
pfot/makefiles/vs2022/libalgo_pfot/: libalgo_pfot.vcxproj  libalgo_pfot.vcxproj.filters  libx64.props
pfot/source/3rdlibs/libUltraFace/: libalgo_ultraface.lib
pfot/source/src/: algo_basicdef.h  libalgo_pfot.cpp  libalgo_pfot.h
pfot/testbed/source/src/: test_pfot.cpp
pfot/testbed/vs2022/test_pfot/: test_pfot.sln
pfot/testbed/vs2022/test_pfot/test_pfot/: test_pfot.vcxproj  test_pfot.vcxproj.filters
ultraface/makefiles/vs2022/libalgo_ultraface/: libalgo_ultraface.vcxproj  libalgo_ultraface.vcxproj.filters  opencv-x64-release.props
ultraface/source/3rdlibs/libMNN/lib/: MNN.lib
ultraface/source/src/: libalgo_ultraface.cpp  libalgo_ultraface.h  ultraface.cpp  ultraface.h
ultraface/source/src-bak/: libalgo_ultraface.cpp  ultraface.cpp  ultraface.h
ultraface/testbed/source/src/: test_ultraface.cpp
ultraface/testbed/vs2022/test_ultraface/: test_ultraface.sln
ultraface/testbed/vs2022/test_ultraface/basic_cv/: basic_cv.cpp  basic_cv.vcxproj  basic_cv.vcxproj.filters  custom_cv.cpp  custom_cv.h  custom_math.cpp  custom_math.h  opencv-x64-release.props
ultraface/testbed/vs2022/test_ultraface/test_ultraface/: opencv-x64-release.props  test_ultraface.vcxproj  test_ultraface.vcxproj.filters
yolo8-mnn/: yolov8_demo.cpp  编译脚本.txt
yolo8-mnn/libs/: MNN.lib
